# np_notebooks

./: .gitignore  README.md  get_updates.ipynb  install.bat  launch.bat  pretest.ipynb  pyproject.toml  requirements.txt  reset_update_launch.bat  update.bat  update.ipynb
.github/workflows/: pin_dependencies.yml
LGN_mapping/: LGN_mapping.ipynb  grating_probe.ipynb  wf_grating_probe.py  widgets.py
archive/: old-dynamic_routing_task2_pilot.ipynb  pupil_test.ipynb
data_management/: move_to_vast.ipynb  return_from_vast.ipynb  upload_s3.ipynb  utils.py
dynamic_gating/: check_mapping_and_behavior_pkls_are_different.py  get_missing_npexp_files.ipynb  push_D1_and_D2.ipynb
dynamic_routing/: dynamic_routing.ipynb  dynamic_routing_task2_pilot.ipynb  optotagging_only.ipynb  pupil_test.ipynb  qc.ipynb
lims/: ccf_upload.ipynb  check_files.ipynb  clear_incoming.ipynb  clear_npexp.ipynb  push_D1_and_D2.ipynb  upload_probe_info.ipynb
lims_upload/: clear_incoming.ipynb  push_D1_and_D2.ipynb
np_ultra/: np_ultra.ipynb
openscope_V2/: V2_pilot.ipynb
openscope_barcode/: barcode_pilot.ipynb
openscope_loop/: loop_pilot.ipynb
openscope_psycode/: psycode_pilot.ipynb
openscope_vippo/: vippo_pilot.ipynb
pretest/: default_pretest.ipynb  pretest.ipynb
sev-workflow/: sev_workflow.ipynb
sorting/: launch_6_probes_full_OEv06x.bat
task_trained_network/: oct22_tt_stim_script.py  pkl_fields_removed.ipynb  ttn_pilot.ipynb  ttn_pilot.py  ttn_widgets.py
templeton/: templeton_workflow.ipynb
vbn/: vbn_2024.ipynb  vbn_2024.py
vbn_opto/: vbn_2024.ipynb  vbn_opto.ipynb
(+2 files in other folders)
