[project]
description = "IPython notebooks for Mindscope Neuropixels workflows"
authors = [
    { name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org" },
]
requires-python = ">=3.11, <3.12"
dependencies = [
    "jupyterlab>=3.6",
    "np-workflows>=1.6.72",
    "npc-sessions>=0.0.222",
    "aind-data-schema==0.33.8",
    "npc-shields>=0.1.9",
]
