[project]
description = "IPython notebooks for Mindscope Neuropixels workflows"
authors = [
    { name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org" },
]
requires-python = ">=3.11, <3.12"
dependencies = [
    "ipykernel",
    "np-workflows>=1.6.84",
    "npc-sessions>=0.0.222",
    "npc-shields>=0.1.12",
    "np-session>=0.6.47",
    "np-config>=0.4.34",
    "np-codeocean[dynamic-routing-metadata]>=0.3.1",
]
